--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <section id="certification">
             <h2>Certification</h2>
             <div>
-                <h3>Harvard University: Computer science for web development - HarvardX Professional Certificate</h3>
+                <h3>Harvard University: Computer science for web programming - HarvardX Professional Certificate program</h3>
                 <ul>
                     <li>Introduction to the intellectual enterprises of computer science and the art of programming</li>
                     <li>Web Programming with Python and JavaScript (<strong>in progress</strong>)</li>
