add commerce project

--- a/index.html
+++ b/index.html
@@ -70,6 +70,20 @@
                         <a href="https://www.youtube.com/watch?v=4FV58w5JizU" target="_blank"><i class="fa-brands fa-youtube"></i></a>
                     </div>
                 </div>
+                <div id="commerce" class="project-tile">
+                    <h3>Commerce</h3>
+                    <div class="project-links">
+                        <a href="https://github.com/pawot/CS50/tree/main/commerce" target="_blank"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://youtu.be/_ERV_qDtN48" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+                    </div>
+                </div>
+                <div class="project-tile">
+                    <h3>Wiki</h3>
+                    <div class="project-links">
+                        <a href="https://github.com/pawot/CS50/tree/main/Wiki" target="_blank"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://www.youtube.com/watch?v=IAWkEouXZCA" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+                    </div>
+                </div>
                 <div id="cash" class="project-tile">
                     <h3>Cash register</h3>
                     <div class="project-links">
@@ -110,13 +124,6 @@
                     <div class="project-links">
                         <a href="https://github.com/pawot/CS50/tree/main/Search" target="_blank"><i class="fa-brands fa-github"></i></a>
                         <a href="https://www.youtube.com/watch?v=xkIc8q6cLTE&t" target="_blank"><i class="fa-brands fa-youtube"></i></a>
-                    </div>
-                </div>
-                <div class="project-tile">
-                    <h3>Wiki</h3>
-                    <div class="project-links">
-                        <a href="https://github.com/pawot/CS50/tree/main/Wiki" target="_blank"><i class="fa-brands fa-github"></i></a>
-                        <a href="https://www.youtube.com/watch?v=IAWkEouXZCA" target="_blank"><i class="fa-brands fa-youtube"></i></a>
                     </div>
                 </div>
                 <div class="project-tile">
